fix: fix path to img

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     and all cool stuff lalalal.</h5>
                             </div>
                             <div class="block-title-text-btn__img">
-                                <img src="../project/img/project.png" alt="Project page">
+                                <img src="img/project.png" alt="Project page">
                             </div>
                             <div class="block-title-text-btn__btn">
                                 <a href="https://Marina-tech-dot.github.io/landing/" target="blanked"
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="page-project__img">
-                        <img src="../project/img/project.png" alt="Project page">
+                        <img src="img/project.png" alt="Project page">
                     </div>
                 </div>
             </section>
@@ -225,7 +225,7 @@ function add(num1, num2) {
                 <div class="footer-buttom">
                     <div class="footer-buttom__logo">
                         <a href="https://rs.school/" class="footer-buttom__link">
-                            <img src="../project/img/logoRSS.svg" alt="logo RS School">
+                            <img src="img/logoRSS.svg" alt="logo RS School">
                         </a>
                     </div>
                     <h6 class="footer-buttom__year">2021</h6>
