fix: change skils figma on vs Code

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li class="page-skills__block page-skills__block_pink">Git</li>
                         <li class="page-skills__block page-skills__block_blue">Gulp</li>
                         <li class="page-skills__block page-skills__block_pink">Figma</li>
-                        <li class="page-skills__block page-skills__block_blue">Figma</li>
+                        <li class="page-skills__block page-skills__block_blue">Vs Code</li>
                     </ul>
                 </div>
             </section>
